Modificar Producto implementado