@@ -28,14 +28,14 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>${javafx.version}</version>
+            <version>25.0.1</version>
             <classifier>${javafx.platform}</classifier>
         </dependency>
         <!-- JavaFX FXML -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>${javafx.version}</version>
+            <version>25.0.1</version>
             <classifier>${javafx.platform}</classifier>
         </dependency>
     </dependencies>
@@ -57,9 +57,18 @@
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
-                <configuration>
-                    <mainClass>reposteria.presentacion.app.App</mainClass>
-                </configuration>
+                <executions>
+                    <execution>
+                        <id>default-cli</id>
+                        <configuration>
+                            <mainClass>reposteria.presentacion.app.App</mainClass>
+                            <options>
+                                <!-- Habilitar acceso nativo (evita warnings de System::load y SQLite) -->
+                                <option>--enable-native-access=ALL-UNNAMED</option>
+                            </options>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
